@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.08-04.02
-Date: 2009-9-17
+Version: 0.08-04.03
+Date: 2009-11-30
 Title: Missing Data Imputation and Model Checking
 Author:
   Andrew Gelman <gelman@stat.columbia.edu>,
