@@ -41,16 +41,16 @@ mi.continuous <- function ( formula, data = NULL, start = NULL,
   bglm.imp    <- bayesglm( formula = formula, data = data, family = gaussian, 
                             n.iter = n.iter, start = start, 
                             drop.unused.levels = FALSE, Warning=FALSE,... )
-
-####get right design matrix#
-  tt <- terms(bglm.imp)
-  Terms <- delete.response(tt)
-  m <- model.frame(Terms, data=data,  xlev = bglm.imp$xlevels)
-  X <- as.matrix(model.matrix(Terms, m, contrasts.arg = bglm.imp$contrasts))
-############################
   determ.pred <- predict(bglm.imp, newdata = data, type = "response" )
+
   if(n.mis>0){
     if(draw.from.beta){
+    ####get right design matrix#
+      tt <- terms(bglm.imp)
+      Terms <- delete.response(tt)
+      m <- model.frame(Terms, data=data,  xlev = bglm.imp$xlevels)
+      X <- as.matrix(model.matrix(Terms, m, contrasts.arg = bglm.imp$contrasts))
+    ############################
       sim.bglm.imp  <- sim(bglm.imp,1)
       sim.coef <- sim.bglm.imp$coef
       sim.sigma <- sim.bglm.imp$sigma
